Add CloudFlare Web Analytics

--- a/index.html
+++ b/index.html
@@ -257,5 +257,7 @@
 
     <!-- Main Application Script -->
     <script type="module" src="app.js"></script>
+
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "86d63f80fea3459c8aba64bf57a59240"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
